@@ -11,7 +11,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Mapper som konverterer ScimUserEntity til Apache SCIMple User objekt
@@ -29,7 +28,7 @@ public class ScimUserMapper {
         ScimUser user = new ScimUser();
 
         // Core attributes
-        user.setId(entity.getNavId());           // SCIM id = navId (f.eks. "S108633")
+        user.setId(entity.getNavId());
         user.setExternalId(entity.getBrukerId()); // externalId = brukerId (OeBS-brukernavn)
         user.setUserName(entity.getBrukerId());
         user.setActive(entity.isActive());
@@ -62,10 +61,13 @@ public class ScimUserMapper {
                     UserGroup gm = new UserGroup();
                     gm.setValue(g.getScimGroupId());
                     gm.setDisplay(g.getScimDisplayName());
-                    gm.setRef(baseUrl + "/scim/v2/Groups/" + g.getScimGroupId());
+                    // $ref settes kun når vi har en gyldig gruppe-ID
+                    if (g.getScimGroupId() != null) {
+                        gm.setRef(baseUrl + "/scim/v2/Groups/" + g.getScimGroupId());
+                    }
                     return gm;
                 })
-                .collect(Collectors.toList());
+                .toList();
             user.setGroups(groupMemberships);
         }
 
@@ -80,6 +82,8 @@ public class ScimUserMapper {
         // NAV OeBS custom extension
         NavOebsExtension navExt = new NavOebsExtension();
         navExt.setFullmakt(entity.getFullmakt());
+        navExt.setEgenansatt(entity.isEgenansatt());
+        // nyttPassord settes ikke på GET — feltet er WRITE_ONLY og sendes kun inn fra Omada på POST/PUT
         user.addExtension(navExt);
 
         // Meta
